--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js"></script>
-    <script src="JS/main.js"></script>
-    <link rel="stylesheet" href="css/styles.css">
+    <script src="main.js"></script>
+    <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,200;0,300;1,300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>my profile</title>
@@ -46,10 +46,10 @@
                 
                 <div class="langing-page">
                     <div class="jackie">
-                        <img src="images/jackie.JPG" alt="jackie" width="170px">
+                        <img src="jackie.JPG" alt="jackie" width="170px">
                     </div>
                     <div class="about" >
-                        <a href="docs/cv.pdf" class="btn btn1" target="_blank">View my CV</a>
+                        <a href="cv.pdf" class="btn btn1" target="_blank">View my CV</a>
                         <a href="#portfolio" class="btn two btn1">View Projects</a>
                     </div>
                 </div>
@@ -99,7 +99,7 @@
                 <div class="box-3">
                     <h2>PROFILE ON LINKEDIN</h2>
                     <a href="https://za.linkedin.com/in/jackie-nomsa-dube-390b66131">
-                        <img src="images/web dev.PNG" alt="" class="link-1">
+                        <img src="web dev.PNG" alt="" class="link-1">
                     </a>
                 </div>
             </div>
@@ -124,7 +124,7 @@
             <div class="my-work">
 
                 <div class=" project project-1">
-                    <img src="images/dice.png" alt="dice game" height="150">
+                    <img src="dice.png" alt="dice game" height="150">
                     <p>women inpublic sector s a trainnig conferencing and training company tha focuses on omen empoerment </p>
                     <h3>skills</h3>
                     <ul>
@@ -135,7 +135,7 @@
                     <a href="public/women.html">read more</a>
                 </div>
                 <div class=" project project-2">
-                    <img src="images/calculator.png" alt="calculator" height="150" >
+                    <img src="calculator.png" alt="calculator" height="150" >
                     <p>assumenda repellat sint tenetur non id tempore!---coming soon </p>
                     <h3>skills</h3>
                     <ul>
@@ -147,7 +147,7 @@
                 </div>
 
                 <div class=" project project-3">
-                    <img src="images/drum.png" alt="drum" height="150" >
+                    <img src="drum.png" alt="drum" height="150" >
                     <p>assumenda repellat sint tenetur non id tempore! --coming soon </p>
                     <h3>skills</h3>
                     <ul>
@@ -159,7 +159,7 @@
                 </div>
 
                 <div class=" project project-4">
-                    <img src="images/travel.png" alt="" height="150">
+                    <img src="travel.png" alt="" height="150">
                     <p>JnJ's travel and tours: is a tourism company located in the gauteng province in South Africa</p>
                     <h3>skills</h3>
                     <ul>
