--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <div class="my-work">
 
                 <div class=" project project-1">
-                    <img src="dice.png" alt="dice game" height="150">
+                    <img src="public.png" alt="women" height="150">
                     <p>women inpublic sector s a trainnig conferencing and training company tha focuses on omen empoerment </p>
                     <h3>skills</h3>
                     <ul>
