--- a/index.html
+++ b/index.html
@@ -128,8 +128,9 @@
                     <p>women inpublic sector s a trainnig conferencing and training company tha focuses on omen empoerment </p>
                     <h3>skills</h3>
                     <ul>
-                        <li>html</li>
-                        <li>css</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Jquery</li>
                         
                     </ul>
                     <a href="public/women.html">read more</a>
@@ -139,9 +140,10 @@
                     <p>assumenda repellat sint tenetur non id tempore!---coming soon </p>
                     <h3>skills</h3>
                     <ul>
-                        <li>html</li>
-                        <li>css</li>
-                        <li>bootstrap</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Bootstrap</li>
+                        <li>Javascript</li>
                     </ul>
                     <a href="#">read more</a>
                 </div>
@@ -151,9 +153,10 @@
                     <p>assumenda repellat sint tenetur non id tempore! --coming soon </p>
                     <h3>skills</h3>
                     <ul>
-                        <li>html</li>
-                        <li>css</li>
-                        <li>bootstrap</li>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Bootstrap</li>
+                        
                     </ul>
                     <a href="#">read more</a>
                 </div>
@@ -163,9 +166,9 @@
                     <p>JnJ's travel and tours: is a tourism company located in the gauteng province in South Africa</p>
                     <h3>skills</h3>
                     <ul>
-                        <li>html & css</li>
-                        <li>javascrip & jquery</li>
-                        <li>bootstrap</li>
+                        <li>HTML & CSS</li>
+                        <li>Javascript & Jquery</li>
+                        <li>Bootstrap</li>
                     </ul>
                     <a href="jnj/travel.html">read more</a>
                 </div>
