--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                         </li>
 
                         <div id="myLinks">
-                            <a href="#about-me" onclick="myFunction()">About</a>
-                            <a href="#skills" onclick="myFunction()">Skills</a>
-                            <a href="#portfolio" onclick="myFunction()">Portfolio</a>
-                            <a href="#mail-me" onclick="myFunction()">Contact</a>
+                            <a href="#about-me" >About</a>
+                            <a href="#skills" >Skills</a>
+                            <a href="#portfolio" >Portfolio</a>
+                            <a href="#mail-me" >Contact</a>
                         </div>
                       </ul>
                     </div>
@@ -86,7 +86,7 @@
                             <td>067 076 9436</td>
                         </tr>
                         <tr>
-                            <td>Adress</td>
+                            <td>Address</td>
                             <td>23 North Rand Road, Kempton Park 1619</td>
                         </tr>
                         <tr>
