--- a/index.html
+++ b/index.html
@@ -120,9 +120,10 @@
                         <div class="full-info">
                             <a href="#" class="image"><img src="images/proj-1.PNG" alt=""></a>
                             <div class="image-overlay img-blur">
-                                <div class="image-title">Flask Portfolio</div>
-                                <p class="image-desc">This is a python/flask, html and css portfolio website</p>
-                                <a href="https://github.com/JackieNomsa/jnd-portfolio" class="code" target="_blank">view-code</a>
+                                <div class="image-title">Django blog app</div>
+                                <p class="image-desc">This is a python/django django bloging application. Allows features like editing, deleting and adding a new blog. It adds to the database then retrieves it through a View </p>
+                                <a href="https://github.com/JackieNomsa/my-django-blog" class="code" target="_blank">view-code</a>
+                                
                             </div>
                         </div>
                     </div>
@@ -148,11 +149,11 @@
                     </div>
                     <div class="project">
                         <div class="full-info">
-                            <a href="#" class="image"><img src="images/blank.jpg" alt=""></a>
+                            <a href="#" class="image"><img src="images/proj-4.PNG" alt=""></a>
                             <div class="image-overlay img-blur">
-                                <div class="image-title">Coming Soon...</div>
-                                <p class="image-desc">Lorem ipsum dolor sit amet.</p>
-                                <a href="#" class="code" target="_blank">view-code</a>
+                                <div class="image-title">Flask Portfolio</div>
+                                <p class="image-desc">This is a python/flask, html and css portfolio website</p>
+                                <a href="https://github.com/JackieNomsa/jnd-portfolio" class="code" target="_blank">view-code</a>
                             </div>
                         </div>
                     </div>
