added django proj

--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
                         <div class="full-info">
                             <a href="#" class="image"><img src="images/blank.jpg" alt=""></a>
                             <div class="image-overlay img-blur">
-                                <div class="image-title">Coming Soon...</div>
-                                <p class="image-desc">Lorem ipsum dolor sit amet.</p>
-                                <a href="#" class="code"target="_blank">view-code</a>
+                                <div class="image-title">To-do list</div>
+                                <p class="image-desc">django to-do list. You can add new to-does, delete and mark completed todos</p>
+                                <a href="https://github.com/JackieNomsa/django-todo-list" class="code"target="_blank">view-code</a>
                             </div>
                         </div>
                     </div>
