--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                     </div>
                     <div class="project">
                         <div class="full-info">
-                            <a href="#" class="image"><img src="images/proj-5.jpg" alt=""></a>
+                            <a href="#" class="image"><img src="images/proj-5.PNG" alt=""></a>
                             <div class="image-overlay img-blur">
                                 <div class="image-title">To-do list</div>
                                 <p class="image-desc">django to-do list. You can add new to-does, delete and mark completed todos</p>
