--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
                         <div class="full-info">
                             <a href="#" class="image"><img src="images/blank.jpg" alt=""></a>
                             <div class="image-overlay img-blur">
-                                <div class="image-title">Coming Soon...</div>
-                                <p class="image-desc">Lorem ipsum dolor sit amet.</p>
-                                <a href="#" class="code" target="_blank">view-code</a>
+                                <div class="image-title">Expense Tracker</div>
+                                <p class="image-desc">This is a python app that requests budget figures and expenses then lets you know if you have reached your budget for the month.</p>
+                                <a href="https://github.com/JackieNomsa/python_expense_tracker" class="code" target="_blank">view-code</a>
                             </div>
                         </div>
                     </div>      
