added a new project

--- a/index.html
+++ b/index.html
@@ -169,11 +169,11 @@
                     </div>
                     <div class="project">
                         <div class="full-info">
-                            <a href="#" class="image"><img src="images/blank.jpg" alt=""></a>
+                            <a href="#" class="image"><img src="images/proj-6.PNG" alt=""></a>
                             <div class="image-overlay img-blur">
                                 <div class="image-title">Expense Tracker</div>
-                                <p class="image-desc">This is a python app that requests budget figures and expenses then lets you know if you have reached your budget for the month.</p>
-                                <a href="https://github.com/JackieNomsa/python_expense_tracker" class="code" target="_blank">view-code</a>
+                                <p class="image-desc">This is a Django/Python app that requests budget figures and expenses then lets you know if you have reached your budget for the month or how much you have left.</p>
+                                <a href="https://github.com/JackieNomsa/my_dj_exp_tracker.git" class="code" target="_blank">view-code</a>
                             </div>
                         </div>
                     </div>      
